--- a/Book.org
+++ b/Book.org
@@ -1,5 +1,9 @@
 * Полдень. Стругацкие
+2/10
 01.01.2020  
 начал и не осилил даже пары часов. Это ужасно. Представления о людях - привет из 50-х. Слишком много мыслешума разных людей, странные технические особенности.
 Выкинул эту фигню.  
-* 
+* Основание 2
+9/10
+14.01.2020
+Прям хорошо, надо было начинать читать по хронологии, теперь хочу перечитать осн. трилогию, но с другой стороны интереснее чем все это продолжилось
