--- a/Book.org
+++ b/Book.org
@@ -4,6 +4,13 @@
 начал и не осилил даже пары часов. Это ужасно. Представления о людях - привет из 50-х. Слишком много мыслешума разных людей, странные технические особенности.
 Выкинул эту фигню.  
 * Основание 2
+Азимов
 9/10
 14.01.2020
 Прям хорошо, надо было начинать читать по хронологии, теперь хочу перечитать осн. трилогию, но с другой стороны интереснее чем все это продолжилось
+* Стальные пещеры
+Азимов
+9/10
+16.01.2020
+Небольшой рассказик вводящий в мир роботов и открывающий взор в космос
+
