--- a/Book.org
+++ b/Book.org
@@ -3,6 +3,7 @@
 01.01.2020  
 начал и не осилил даже пары часов. Это ужасно. Представления о людях - привет из 50-х. Слишком много мыслешума разных людей, странные технические особенности.
 Выкинул эту фигню.  
+
 * Основание 2
 Азимов
 9/10
@@ -13,4 +14,13 @@
 9/10
 16.01.2020
 Небольшой рассказик вводящий в мир роботов и открывающий взор в космос
+
+* Обнаженное солнце
+Азимов
+17.01.2020
+
+* Роботы зари
+Азимов
+18.01.2020
+
 
