--- a/Med.org
+++ b/Med.org
@@ -1,4 +1,5 @@
 01.01.2020 85.1 кг
 02.01.2020 Пока разделывались с поросем, как-то неприятно свербит в левой стороне груди
 16.01.2020 85.7kg
+09.02.2020 простуда, першит горло, температура, болит голова
 
