--- a/Med.org
+++ b/Med.org
@@ -2,4 +2,6 @@
 02.01.2020 Пока разделывались с поросем, как-то неприятно свербит в левой стороне груди
 16.01.2020 85.7kg
 09.02.2020 простуда, першит горло, температура, болит голова
-
+12.02.2020 Температурит, болит горло, как с перепою, после 15 часов вообще ничего не далел, температура вечером была 39.5, пропотел весь.  
+13.02.2020 Отпросился с работы. Пью ГриппоФлю, Ингавирин, Кутаюсь в одеяло. Температура 38.0. Но все время чувствую себя хорошо.  
+14.02.2020 Вообще ничего не чувствую плохого. Температура 37.0. Кашель.  
