--- a/Book.org
+++ b/Book.org
@@ -28,4 +28,8 @@
 26.01.2020
 Как сериал - супер
 
-*
+* Гиперион
+28.04.2020
+2/10 - вода в ступе, никакая технологи. оборваный конец. Читать дальше не хочется.
+
+
