--- a/Book.org
+++ b/Book.org
@@ -32,4 +32,9 @@
 28.04.2020
 2/10 - вода в ступе, никакая технологи. оборваный конец. Читать дальше не хочется.
 
+* Трилогия марса
+Робинсон
+27.05.2020
+8/10 - очень неплохое. Под конец немного затянуто.
+
 
