--- a/Book.org
+++ b/Book.org
@@ -37,4 +37,12 @@
 27.05.2020
 8/10 - очень неплохое. Под конец немного затянуто.
 
+* Чудотворец из вшивого тупика
+03.06.2020
+7/10 художка. очень короткий. норм, но я чет люблю подлиннее
+
+* Хаос. Придумывая науку
+05.06.2020
+6/10 Не очень, но тема прикольная
+
 
