--- a/Med.org
+++ b/Med.org
@@ -4,4 +4,6 @@
 09.02.2020 простуда, першит горло, температура, болит голова
 12.02.2020 Температурит, болит горло, как с перепою, после 15 часов вообще ничего не далел, температура вечером была 39.5, пропотел весь.  
 13.02.2020 Отпросился с работы. Пью ГриппоФлю, Ингавирин, Кутаюсь в одеяло. Температура 38.0. Но все время чувствую себя хорошо.  
-14.02.2020 Вообще ничего не чувствую плохого. Температура 37.0. Кашель.  
+14.02.2020 Вообще ничего не чувствую плохого. Температура 37.0. Кашель. 
+17.06.2020  Больничный по давлению. 170. рассинхрон сердцебиения
+18.06.2020
