--- a/Med.org
+++ b/Med.org
@@ -6,4 +6,6 @@
 13.02.2020 Отпросился с работы. Пью ГриппоФлю, Ингавирин, Кутаюсь в одеяло. Температура 38.0. Но все время чувствую себя хорошо.  
 14.02.2020 Вообще ничего не чувствую плохого. Температура 37.0. Кашель. 
 17.06.2020  Больничный по давлению. 170. рассинхрон сердцебиения
-18.06.2020
+18.06.2020 Канкор, Аттенто1040, магний, мильдоний
+
+ 
