--- a/Med.org
+++ b/Med.org
@@ -7,5 +7,5 @@
 14.02.2020 Вообще ничего не чувствую плохого. Температура 37.0. Кашель. 
 17.06.2020  Больничный по давлению. 170. рассинхрон сердцебиения
 18.06.2020 Канкор, Аттенто1040, магний, мильдоний
-
+22.06.2020 Диагностика. Вроде ничего не нашли.
  
