--- a/Med.org
+++ b/Med.org
@@ -8,4 +8,5 @@
 17.06.2020  Больничный по давлению. 170. рассинхрон сердцебиения
 18.06.2020 Канкор, Аттенто1040, магний, мильдоний
 22.06.2020 Диагностика. Вроде ничего не нашли.
- 
+27.06.2020 87.5kg надо меньше есть
+
