--- a/Book.org
+++ b/Book.org
@@ -58,4 +58,10 @@
 27.07.2020
 8/10 Прям хорошо. Полезная
 
+* Экспансия. Пробуждение левиафана
+15.08.2020
+9/10 
+Хотя я и смотрел сериал, а он идет копейка в копейку. Читать было захватывающе интересно.
+А еще я узнал, что у меня только 4 книги из 9.
+
 
