--- a/Book.org
+++ b/Book.org
@@ -64,4 +64,9 @@
 Хотя я и смотрел сериал, а он идет копейка в копейку. Читать было захватывающе интересно.
 А еще я узнал, что у меня только 4 книги из 9.
 
+* Воспоминания о будущем
+Хазин
+12.09.2020
+8/10 Хорошо.
+
 
