--- a/Book.org
+++ b/Book.org
@@ -69,4 +69,8 @@
 12.09.2020
 8/10 Хорошо.
 
+* Экспансия 3
+19.09.2020
+7/10 Уже видел, надо дочитать 4 и переходить к еще неэкранизированным частям
+
 
