--- a/Med.org
+++ b/Med.org
@@ -10,4 +10,6 @@
 22.06.2020 Диагностика. Вроде ничего не нашли.
 27.06.2020 87.5kg надо меньше есть
 16.08.2020 89.4kg
+11.10.2020 88.8kg
+12.10.2020 Температура 38оС, ломит тело немного, почти не чувствую, слегка саднит горло
 
