--- a/Book.org
+++ b/Book.org
@@ -94,3 +94,8 @@
 7/10
 
 
+* Олимпиада
+Азимов
+9/10
+25.11.2020
+Прекрасно. Азимов - мастер подросткового рассказа. Надо всячески знакомить детей с его творчеством. Кинул ссылочку в свою группу про HL
