--- a/Med.org
+++ b/Med.org
@@ -12,4 +12,5 @@
 16.08.2020 89.4kg
 11.10.2020 88.8kg
 12.10.2020 Температура 38оС, ломит тело немного, почти не чувствую, слегка саднит горло
+09.12.2020 Что-то уже несколько недель начал замечать, что у меня побаливает позвонок посередине один, если на него надовить пальчиком
 
