--- a/Book.org
+++ b/Book.org
@@ -99,3 +99,10 @@
 9/10
 25.11.2020
 Прекрасно. Азимов - мастер подросткового рассказа. Надо всячески знакомить детей с его творчеством. Кинул ссылочку в свою группу про HL
+
+* Игра в бисер
+5/10 
+12.11.2020
+недочитал последнюю главу. Какая то муть
+
+
