--- a/Med.org
+++ b/Med.org
@@ -1,7 +1,8 @@
 01.01.2020 85.1 кг
 02.01.2020 Пока разделывались с поросем, как-то неприятно свербит в левой стороне груди
 16.01.2020 85.7kg
-09.02.2020 простуда, першит горло, температура, болит голова
+ вечером не былл
+ 09.02.2020 простуда, першит горло, температура, болит голова
 12.02.2020 Температурит, болит горло, как с перепою, после 15 часов вообще ничего не далел, температура вечером была 39.5, пропотел весь.  
 13.02.2020 Отпросился с работы. Пью ГриппоФлю, Ингавирин, Кутаюсь в одеяло. Температура 38.0. Но все время чувствую себя хорошо.  
 14.02.2020 Вообще ничего не чувствую плохого. Температура 37.0. Кашель. 
@@ -13,4 +14,4 @@
 11.10.2020 88.8kg
 12.10.2020 Температура 38оС, ломит тело немного, почти не чувствую, слегка саднит горло
 09.12.2020 Что-то уже несколько недель начал замечать, что у меня побаливает позвонок посередине один, если на него надовить пальчиком
-
+16.12.2020 Легал по работе и что то устал, Все вокруг гремят соплями. Я тоже решил. В обед была температурп 37.0
