--- a/Med.org
+++ b/Med.org
@@ -14,4 +14,6 @@
 11.10.2020 88.8kg
 12.10.2020 Температура 38оС, ломит тело немного, почти не чувствую, слегка саднит горло
 09.12.2020 Что-то уже несколько недель начал замечать, что у меня побаливает позвонок посередине один, если на него надовить пальчиком
-16.12.2020 Легал по работе и что то устал, Все вокруг гремят соплями. Я тоже решил. В обед была температурп 37.0
+16.12.2020 Бегал по работе и что то устал, Все вокруг гремят соплями. Я тоже решил. В обед была температурп 37.0
+17.12.2020 Сьел 2 таблетки Ингавирина. Температура 37. болит голова и долго в маске задыхаюсь. заложен нос
+
